--- a/design.css
+++ b/design.css
@@ -18,7 +18,7 @@ body{
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    background-color: black;
+    background-color: rgb(188, 191, 197);
     color: white;
 }
 
@@ -39,7 +39,7 @@ header{
 
 .logo{
     font-size: 3rem;
-    color: #b74b4b;
+    color: #4b6db7;
     font-weight: 800;
     cursor: pointer;
     transition: 0.5s ease;
@@ -60,8 +60,8 @@ nav a{
 
 nav a:hover,
 nav a.active{
-    color: #b74b4b;
-    border-bottom: 3px solid #b74b4b;
+    color: #4b6db7;
+    border-bottom: 3px solid #4b6db7;
 }
 
 @media(max-width:995px){
@@ -71,11 +71,11 @@ nav a.active{
         top: 0;
         right: 0;
         width: 40%;
-        border-left: 3px solid #b74b4b;
-        border-bottom: 3px solid #b74b4b;
+        border-left: 3px solid #4b6db7;
+        border-bottom: 3px solid #4b6db7;
         border-bottom-left-radius: 2rem;
         padding: 1rem solid;
-        background-color: #161616;
+        background-color: #a59d9d;
         border-top: 0.1rem solid rgba(0,0,0,0.1);
     }
 
@@ -93,7 +93,7 @@ nav a.active{
     nav a.active{
         padding: 1rem;
         border-radius: 0.5rem;
-        border-bottom: 0.5rem solid #b74b4b;
+        border-bottom: 0.5rem solid #4b6db7;
     }
 }
 
@@ -117,7 +117,7 @@ section{
 }
 
 span{
-    color: #b74b4b;
+    color: #4b6db7;
 }
 
 .home-content h3{
@@ -138,7 +138,7 @@ span{
     position: relative;
     width: 32vw;
     border-radius: 50%;
-    box-shadow: 0 0 25px solid #b74b4b;
+    box-shadow: 0 0 25px solid #4b6db7;
     cursor: pointer;
     transition: 0.2s linear;
 }
@@ -155,19 +155,19 @@ span{
     width: 4rem;
     height: 4rem;
     background-color: transparent;
-    border: 0.2rem solid #b74b4b;
+    border: 0.2rem solid #4b6db7;
     font-size: 2rem;
     border-radius: 50%;
     margin: 3rem 1.5rem 3rem 0;
     transition: 0.3s ease;
-    color: #b74b4b;
+    color: #4b6db7;
 }
 
 .social-icons a:hover{
     color: black;
     transform: scale(1.3) translateY(-5px);
-    background-color: #b74b4b;
-    box-shadow: 0  0 25px #b74b4b;
+    background-color: #4b6db7;
+    box-shadow: 0  0 25px #4b6db7;
 }
 
 .btn{
@@ -176,19 +176,19 @@ span{
     background-color: black;
     border-radius: 4rem;
     font-size: 1.6rem;
-    color: #b74b4b;
+    color: #4b6db7;
     letter-spacing: 0.3rem;
     font-weight: 600;
-    border: 2px solid #b74b4b;
+    border: 2px solid #4b6db7;
     transition: 0.3s ease;
     cursor: pointer;
 }
 
 .btn:hover{
     transform: scale3d(1.03);
-    background-color: #b74b4b;
+    background-color: #4b6db7;
     color: black;
-    box-shadow: 0 0 25px #b74b4b;
+    box-shadow: 0 0 25px #4b6db7;
 }
 
 .typing-text{
@@ -203,7 +203,7 @@ span{
 
 .typing-text span::before{
     content: "software Developer";
-    color: #b74b4b;
+    color: #4b6db7;
     animation: words 20s infinite;
 }
 
@@ -220,7 +220,7 @@ span{
 
 @keyframes cursor{
     to{
-        border-left: 3px solid #b74b4b;
+        border-left: 3px solid #4b6db7;
     }
 }
 
